--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -91,7 +91,8 @@
 	"txt-incident-event": "Security Monitoring",
 	"txt-incident-related": "Correlation Analysis",
 	"txt-incident-health": "Health Status Statistic",
-	"txt-tempSaveRetrive": "Retrive temporary saved data",
+	"txt-tempSaveRestore": "Restore temporary saved data",
+	"txt-exportStatisticsReport": "Export Statistics Report",
 	"txt-export-all": "Export Incidents by PDF in Search List",
 	"txt-export-all-word": "Export Incidents by Word in Search List",
 	"txt-addIncident-events": "Add Security Monitoring Incident",
