--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -93,6 +93,7 @@
 	"txt-incident-related": "關聯分析",
 	"txt-incident-health": "健康狀態統計",
 	"txt-tempSaveRestore": "有暫存是否還原",
+	"txt-exportStatisticsReport": "匯出統計報告",
 	"txt-export-all": "以PDF匯出列表中所有事件單",
 	"txt-export-all-word": "以Word匯出列表中所有事件單",
 	"txt-addIncident-events": "新增資安監控事件單",
