Add 'view more' dialog to show details CVE info.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -391,7 +391,15 @@
     "txt-cpePage": "CPE",
     "txt-dashboard": "Dashboard",
     "dashboard": {
-      "txt-vulnerabilityList": "Vulnerability List"
+      "txt-vulnerabilityList": "Vulnerability List",
+      "txt-vulnerabilityDetails": "Vulnerability Details",
+      "txt-exposedDevices": "Exposed Devices",
+      "txt-relatedSoftware": "Related Software",
+      "txt-group": "Group",
+      "txt-hostName": "Host Name",
+      "txt-daysOpen": "Days Open",
+      "txt-system": "System",
+      "txt-ip": "IP"
     },
     "txt-endpointSecuritySettings": "Endpoint Security Settings",
     "txt-securityDiagnostic": "Security Diagnostic",
