Add notify status switch for Syslog Config page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -29,6 +29,7 @@
   "txt-closeRefresh": "Close and refresh content",
   "txt-show": "Show",
   "txt-tips": "Tips",
+  "txt-notifyStatus": "Notify Status",
   "txt-layout-setting": "Layout Setting",
   "txt-account": "Account",
   "txt-accounts": "Accounts",
@@ -1326,6 +1327,7 @@
     "avgLogSizeB": "Averge Log Size (byte)",
     "property": "Data Property",
     "patternName": "Pattern",
+    "notify": "Log Error Notify Status",
     "ip": "IP",
     "host": "Host",
     "name": "Name",
@@ -1348,7 +1350,7 @@
     "txt-exportSyslogCharts": "Export Syslog Charts",
     "txt-hostIP": "Host IP",
     "txt-hostName": "Host Name",
-    "txt-editHostName": "Edit Host Name",
+    "txt-editHostInfo": "Edit Host Info",
     "txt-netProxyStatus": "NetProxy Status",
     "txt-netProxyName": "NetProxy Name",
     "txt-getLatest": "Get Latest Input Text",
