--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -29,6 +29,7 @@
   "txt-closeRefresh": "關閉並重新整理",
   "txt-show": "顯示",
   "txt-tips": "提示",
+  "txt-notifyStatus": "通知狀態",
   "txt-layout-setting": "版面設定",
   "txt-account": "帳號",
   "txt-accounts": "帳號",
@@ -1325,6 +1326,7 @@
     "avgLogSizeB": "平均資料大小(byte)",
     "property": "資料屬性",
     "patternName": "Pattern",
+    "notify": "Log異常通知狀態",
     "ip": "IP",
     "host": "主機",
     "name": "名稱",
@@ -1347,7 +1349,7 @@
     "txt-exportSyslogCharts": "匯出日誌趨勢圖",
     "txt-hostIP": "主機IP",
     "txt-hostName": "主機名稱",
-    "txt-editHostName": "編輯主機名稱",
+    "txt-editHostInfo": "編輯主機資訊",
     "txt-netProxyStatus": "NetProxy狀態",
     "txt-netProxyName": "NetProxy名稱",
     "txt-getLatest": "取得最新串流資料",
