--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -522,6 +522,7 @@
     "groups": "群組",
     "serviceType": "服務種類",
     "connectionStatus": "連線狀態",
+    "notifyStatus": "通知狀態",
     "txt-lastAlertDataUpdDT": "上次告警資料更新時間",
     "txt-attackCnt": "誘捕攻擊次數",
     "txt-agentMode": "網路監控模式",
@@ -557,7 +558,8 @@
   },
   "serviceStatusFields": {
     "status": "狀態",
-    "serviceName": "服務名稱"
+    "serviceName": "服務名稱",
+    "notifyStatus": "通知狀態"
   },
   "incidentFields": {
     "severity": "嚴重等級",
