--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -27,6 +27,8 @@
   "txt-view": "瀏覽",
   "txt-close": "關閉",
   "txt-closeRefresh": "關閉並重新整理",
+  "txt-statusOn": "開啟",
+  "txt-statusOff": "關閉",
   "txt-show": "顯示",
   "txt-tips": "提示",
   "txt-notifyStatus": "通知狀態",
