--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -11,6 +11,7 @@
   "txt-low": "低",
   "txt-medium": "中",
   "txt-high": "高",
+  "txt-critical": "嚴重",
   "txt-switch": "開關",
   "txt-ok": "確認",
   "txt-time": "時間",
@@ -394,17 +395,23 @@
     "txt-cpePage": "CPE維護",
     "txt-dashboard": "Dashboard",
     "dashboard": {
-      "txt-severityLevelQuery": "CVE風險暴露等級分佈查詢",
-      "txt-monthlySeverityTrend": "CVE每月漏洞等級統計趨勢",
+      "txt-severityLevelQuery": "弱點暴露等級",
+      "txt-monthlySeverityTrend": "每月漏洞等級趨勢",
       "txt-vulnerabilityList": "弱點漏洞清單",
-      "txt-vulnerabilityDetails": "Vulnerability Details",
-      "txt-exposedDevices": "Exposed Devices",
-      "txt-relatedSoftware": "Related Software",
-      "txt-group": "Group",
-      "txt-hostName": "Host Name",
-      "txt-daysOpen": "Days Open",
-      "txt-system": "System",
-      "txt-ip": "IP"
+      "txt-vulnerabilityDetails": "漏洞詳細資訊",
+      "txt-exposedDevices": "暴露的裝置",
+      "txt-relatedSoftware": "相關軟體",
+      "txt-group": "群組",
+      "txt-hostName": "主機名稱",
+      "txt-daysOpen": "已存在天數",
+      "txt-system": "作業系統",
+      "txt-ip": "IP",
+      "txt-vulnerabilityDesc": "漏洞描述",
+      "txt-name": "名稱",
+      "txt-severity": "等級",
+      "txt-cvssVersion": "CVSS版本",
+      "txt-publishedDate": "官方發表時間",
+      "txt-updatedDate": "最近更新時間"
     },
     "txt-endpointSecuritySettings": "端點安全設定",
     "txt-securityDiagnostic": "資安健診",
