Add host name search for the Host dashboard exposed device tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -400,6 +400,7 @@
       "txt-vulnerabilityList": "Vulnerability List",
       "txt-vulnerabilityDetails": "Vulnerability Details",
       "txt-exposedDevices": "Exposed Devices",
+      "txt-exposedDevicesCount": "Exposed Devices Count",
       "txt-relatedSoftware": "Related Software",
       "txt-group": "Group",
       "txt-hostName": "Host Name",
