Add search for Host Dashboard page.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -95,8 +95,12 @@
 	"txt-exportStatisticsReport": "Export Statistics Report",
 	"txt-export-all": "Export Incidents by PDF in Search List",
 	"txt-export-all-word": "Export Incidents by Word in Search List",
+	"txt-addIncident": "Add Incident",
+	"txt-eventsIncident": "Evnets Incident",
+	"txt-ttpsIncident": "TTPS Incident",
 	"txt-addIncident-events": "Add Security Monitoring Incident",
 	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
+	"txt-addIncident-edr": "Add EDR Incident",
 	"txt-viewIncident-events": "View Security Monitoring Incident",
 	"txt-viewIncident-ttps": "View Correlation Analysis Incident",
 	"txt-editIncident-events": "Edit Security Monitoring Incident",
