--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -96,8 +96,12 @@
 	"txt-exportStatisticsReport": "匯出統計報告",
 	"txt-export-all": "以PDF匯出列表中所有事件單",
 	"txt-export-all-word": "以Word匯出列表中所有事件單",
+	"txt-addIncident": "新增事件單",
+	"txt-eventsIncident": "監控事件單",
+	"txt-ttpsIncident": "關聯分析事件單",
 	"txt-addIncident-events": "新增資安監控事件單",
 	"txt-addIncident-ttps": "新增關聯分析事件單",
+	"txt-addIncident-edr": "新增EDR事件單",
 	"txt-viewIncident-events": "檢視資安監控事件單",
 	"txt-viewIncident-ttps": "檢視關聯分析事件單",
 	"txt-editIncident-events": "編輯資安監控事件單",
