--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -399,6 +399,7 @@
       "txt-monthlySeverityTrend": "每月漏洞等級趨勢",
       "txt-vulnerabilityList": "弱點漏洞清單",
       "txt-vulnerabilityDetails": "漏洞詳細資訊",
+      "txt-vulnerabilityCount": "弱點漏洞數量",
       "txt-exposedDevices": "暴露的裝置",
       "txt-exposedDevicesCount": "暴露的裝置數量",
       "txt-relatedSoftware": "相關軟體",
