Add CVE list export functionality for Host Dashboard page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -71,6 +71,7 @@
   "txt-add": "Add",
   "txt-add2": "Add",
   "txt-existing": "Existing",
+  "txt-more": "more",
   "txt-query": "Search",
   "txt-remove": "Remove",
   "txt-refresh": "Refresh",
