--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -71,6 +71,7 @@
   "txt-add": "新增",
   "txt-add2": "加入",
   "txt-existing": "現有",
+  "txt-more": "更多",
   "txt-query": "查詢",
   "txt-remove": "移除",
   "txt-refresh": "更新",
