Update fields name for Incident Log.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -580,10 +580,9 @@
     "victimName": "Victim",
     "reporter": "Report Source",
     "suggestion": "Sign-off Suggestion",
-    "createDttm": "Create Datetime",
     "createDttm-start": "Create Datetime(From)",
     "createDttm-end": "Create Datetime(To)",
-    "sendTime": "Send Datetime",
+    "sendDttm": "Send Datetime",
     "createdDttm": "Create Datetime",
     "impactAssessment": "Impact Assessment",
     "attackName": "Attack Name",
