--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -580,10 +580,9 @@
     "victimName": "單位",
     "reporter": "通報來源",
     "suggestion": "簽核意見",
-    "createDttm": "建立時間",
     "createDttm-start": "建立時間(起)",
     "createDttm-end": "建立時間(訖)",
-    "sendTime": "發布時間",
+    "sendDttm": "發布時間",
     "createdDttm": "建立時間",
     "impactAssessment": "影響等級",
     "attackName": "攻擊手法",
