--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -768,5 +768,13 @@
     "relatedSoftware": "相關軟體",
     "daysOpen": "已存在天數",
     "exposedDevices": "暴露裝置數量"
+  },
+  "hostCpeFields": {
+    "product": "產品",
+    "system": "系統",
+    "vendor": "廠商",
+    "version": "版本",
+    "vulnerabilityNum": "已存在天數",
+    "exposedDevicesTotal": "暴露裝置數量"
   }
 }
