Fix bug for Host Dashboard and Inventory pages.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -424,13 +424,21 @@
       "txt-orgSoftwareList": "Organization Software List",
       "txt-applicationName": "Application Name",
       "txt-softwareCount": "Software Count",
-      "txt-cpeKey": "Key",
+      "txt-cpe23uri": "CPE Name",
+      "txt-cpeNameComponents": "CPE Name Components",
+      "txt-edition": "Edition",
+      "txt-language": "Language",
+      "txt-other": "Other",
+      "txt-part": "Part",
       "txt-product": "Product",
-      "txt-productName": "Product Name",
+      "txt-productCpename": "Metadata",
+      "txt-swEdition": "Software Edition",
+      "txt-targetHw": "Target Hardware",
+      "txt-targetSw": "Target Software",
+      "txt-update": "Update",
       "txt-vendor": "Vendor",
       "txt-version": "Version",
-      "txt-swEdition": "Sowftware Edition",
-      "txt-createDttm": "Create Date"
+      "txt-productName": "Product Name"
     },
     "txt-endpointSecuritySettings": "Endpoint Security Settings",
     "txt-securityDiagnostic": "Security Diagnostic",
