--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -779,6 +779,6 @@
     "vendor": "Vendor",
     "version": "Version",
     "vulnerabilityNum": "Vulnerability Number",
-    "exposedDevicesTotal": "Exposed Devices Count"
+    "exposedDevices": "Exposed Devices Count"
   }
 }
