--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -424,13 +424,21 @@
       "txt-orgSoftwareList": "組織軟體清單",
       "txt-applicationName": "軟體名稱",
       "txt-softwareCount": "軟體數量",
-      "txt-cpeKey": "Key",
+      "txt-cpe23uri": "CPE名稱",
+      "txt-cpeNameComponents": "CPE名稱組成元件",
+      "txt-edition": "版本",
+      "txt-language": "語言",
+      "txt-other": "其他",
+      "txt-part": "部分",
       "txt-product": "產品",
-      "txt-productName": "產品名稱",
-      "txt-vendor": "廠商",
-      "txt-version": "版本",
+      "txt-productCpename": "Metadata",
       "txt-swEdition": "軟體版本",
-      "txt-createDttm": "建立日期"
+      "txt-targetHw": "目標硬體",
+      "txt-targetSw": "目標軟體",
+      "txt-update": "更新",
+      "txt-vendor": "廠商",
+      "txt-version": "版號",
+      "txt-productName": "產品名稱"
     },
     "txt-endpointSecuritySettings": "端點安全設定",
     "txt-securityDiagnostic": "資安健診",
