--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -426,6 +426,7 @@
       "txt-softwareCount": "Software Count",
       "txt-cpe23uri": "CPE Name",
       "txt-cpeNameComponents": "CPE Name Components",
+      "txt-inventoryList": "CPE List",
       "txt-edition": "Edition",
       "txt-language": "Language",
       "txt-other": "Other",
