Add Kill chain list and attack process list for Incident form.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -642,7 +642,11 @@
     "srcIPListString": "Source IP ",
     "dstIPListString": "Destination IP",
     "phone": "Phone",
-    "email": "Email"
+    "email": "Email",
+    "killChain": "Kill Chain",
+    "killChainName": "Name",
+    "phaseName": "Phase",
+    "attackProcess": "Attack Process"
   },
   "severityTableFields": {
     "dataSourceType": "Type",
