Add more fields and its validatons for TTPS page.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -605,8 +605,16 @@
     "fileName": "File Name",
     "fileExtension": "File Extension",
     "fileSize": "File Size",
+    "fileCreateDttm": "File Create Datetime",
+    "fileModifyDttm": "File Modify Datetime",
+    "fileAccessDttm": "File Access Datetime",
     "fileMemo": "File Description",
     "fileDttm": "Upload Time",
+    "fileUpload": "File Upload",
+    "fileProduct": "File Product",
+    "fileFamily": "File Family",
+    "fileSeverity": "File Severity",
+    "fileResult": "File Result",
     "uriType": "URI Type",
     "uriValue": "URI Value",
     "domain": "Domain",
