--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -605,8 +605,16 @@
     "fileName": "檔案名稱",
     "fileExtension": "檔案類型",
     "fileSize": "檔案大小",
+    "fileCreateDttm": "檔案建立時間",
+    "fileModifyDttm": "檔案修改時間",
+    "fileAccessDttm": "檔案存取時間",
     "fileMemo": "附件說明",
     "fileDttm": "上傳時間",
+    "fileUpload": "檔案上傳",
+    "fileProduct": "惡意程式分析程式",
+    "fileFamily": "惡意程式家族",
+    "fileSeverity": "威脅等級",
+    "fileResult": "分析結果",
     "uriType": "URI類型",
     "uriValue": "URI內容",
     "domain": "網域",
