--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -106,6 +106,7 @@
   "-9015": "裝置不存在",
   "-9016": "Regex格式錯誤",
   "-9017": "子項目存在中",
+  "-9020": "檔案必須是zip檔",
 
   "-9100": "解析Json失敗",
   "-9101": "解析檔案失敗",
