Add new form fields for EDR page.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -32,6 +32,11 @@
 	"txt-incident-soc-config": "SOC Config Settings",
 	"txt-incident-events": "Incident Events",
 	"txt-incident-ttps": "TTPs",
+	"txt-incident-ip": "Incident IP",
+	"txt-incident-url": "Incident URL",
+	"txt-incident-info": "Incident Info",
+	"txt-incident-ttps-desc": "Incident Description",
+	"txt-incident-index-type": "Index Type",
 	"txt-prev-page": "Prev",
 	"txt-next-page": "Next",
 	"txt-audit": "Audit",
