--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -32,6 +32,11 @@
 	"txt-incident-soc-config": "SOC參數設定",
 	"txt-incident-events": "監控觸發紀錄",
 	"txt-incident-ttps": "攻擊手法",
+	"txt-incident-ip": "中繼站IP",
+	"txt-incident-url": "中繼站URL",
+	"txt-incident-info": "漏洞資訊",
+	"txt-incident-ttps-desc": "手法描述",
+	"txt-incident-index-type": "指標類型",
 	"txt-prev-page": "上一頁",
 	"txt-next-page": "下一頁",
 	"txt-audit": "審核",
