Start working on the EDR form.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -32,11 +32,6 @@
 	"txt-incident-soc-config": "SOC Config Settings",
 	"txt-incident-events": "Incident Events",
 	"txt-incident-ttps": "TTPs",
-	"txt-incident-ip": "Incident IP",
-	"txt-incident-url": "Incident URL",
-	"txt-incident-info": "Incident Info",
-	"txt-incident-ttps-desc": "Incident Description",
-	"txt-incident-index-type": "Index Type",
 	"txt-prev-page": "Prev",
 	"txt-next-page": "Next",
 	"txt-audit": "Audit",
@@ -103,13 +98,15 @@
 	"txt-addIncident": "Add Incident",
 	"txt-eventsIncident": "Evnets Incident",
 	"txt-ttpsIncident": "TTPS Incident",
-	"txt-addIncident-events": "Add Security Monitoring Incident",
-	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
-	"txt-addIncident-edr": "Add EDR Incident",
-	"txt-viewIncident-events": "View Security Monitoring Incident",
-	"txt-viewIncident-ttps": "View Correlation Analysis Incident",
-	"txt-editIncident-events": "Edit Security Monitoring Incident",
-	"txt-editIncident-ttps": "Edit Correlation Analysis Incident",
+	"txt-addIncident-monitor": "Add Security Monitoring Incident",
+	"txt-addIncident-analyze": "Add Correlation Analysis Incident",
+	"txt-addIncident-EDR": "Add EDR Incident",
+	"txt-viewIncident-monitor": "View Security Monitoring Incident",
+	"txt-viewIncident-analyze": "View Correlation Analysis Incident",
+	"txt-viewIncident-EDR": "View EDR Incident",
+	"txt-editIncident-monitor": "Edit Security Monitoring Incident",
+	"txt-editIncident-analyze": "Edit Correlation Analysis Incident",
+	"txt-editIncident-EDR": "Edit EDR Incident",
 	"txt-sendHealthCsv": "Send Health Status Statistic CSV",
 	"txt-exportHealthCsv": "Export Health Status Statistic CSV",
 	"txt-restore": "Restore",
