--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -32,11 +32,6 @@
 	"txt-incident-soc-config": "SOC參數設定",
 	"txt-incident-events": "監控觸發紀錄",
 	"txt-incident-ttps": "攻擊手法",
-	"txt-incident-ip": "中繼站IP",
-	"txt-incident-url": "中繼站URL",
-	"txt-incident-info": "漏洞資訊",
-	"txt-incident-ttps-desc": "手法描述",
-	"txt-incident-index-type": "指標類型",
 	"txt-prev-page": "上一頁",
 	"txt-next-page": "下一頁",
 	"txt-audit": "審核",
@@ -104,13 +99,15 @@
 	"txt-addIncident": "新增事件單",
 	"txt-eventsIncident": "監控事件單",
 	"txt-ttpsIncident": "關聯分析事件單",
-	"txt-addIncident-events": "新增資安監控事件單",
-	"txt-addIncident-ttps": "新增關聯分析事件單",
-	"txt-addIncident-edr": "新增EDR事件單",
-	"txt-viewIncident-events": "檢視資安監控事件單",
-	"txt-viewIncident-ttps": "檢視關聯分析事件單",
-	"txt-editIncident-events": "編輯資安監控事件單",
-	"txt-editIncident-ttps": "編輯關聯分析事件單",
+	"txt-addIncident-monitor": "新增資安監控事件單",
+	"txt-addIncident-analyze": "新增關聯分析事件單",
+	"txt-addIncident-EDR": "新增EDR事件單",
+	"txt-viewIncident-monitor": "檢視資安監控事件單",
+	"txt-viewIncident-analyze": "檢視關聯分析事件單",
+	"txt-viewIncident-EDR": "檢視EDR事件單",
+	"txt-editIncident-monitor": "編輯資安監控事件單",
+	"txt-editIncident-analyze": "編輯關聯分析事件單",
+	"txt-editIncident-EDR": "編輯EDR事件單",
 	"txt-sendHealthCsv": "發布健康狀態統計單",
 	"txt-exportHealthCsv": "匯出健康狀態統計單",
 	"txt-restore": "還原",
