Complete the form validations for EDR page.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -166,6 +166,7 @@
 	"txt-validTechniqueInfa": "Please check the Technique & Infrastructure Type",
 	"txt-validTTPs": "Please check the is enter correct TTPs values or not",
 	"txt-validEvents": "Please check the is enter correct Incident Events values or not",
+	"txt-validDstHostname": "Please check the is enter correct destination host name or not",
 	"txt-validCategory": "Please check the is enter correct Category values or not",
 	"txt-validBasic": "Please check the is enter correct Incident Basic Info values or not",
 	"txt-portValidationFail": "Please check the correct port number",
