--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -169,6 +169,7 @@
 	"txt-validDstHostname": "Please check the is enter correct destination host name or not",
 	"txt-validCategory": "Please check the is enter correct Category values or not",
 	"txt-validBasic": "Please check the is enter correct Incident Basic Info values or not",
+	"txt-validKillChain": "Please check the is enter correct Kill Chain values or not",
 	"txt-portValidationFail": "Please check the correct port number",
 	"txt-validUnit": "Please check the is enter correct Incident Unit values or not",
 	"txt-superAccount-not-set-unit": "No binding unit has been set for this account, it will jump to the default page.",
