Complete adding the KBID functionality for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -211,6 +211,7 @@
   "txt-export-getFileIntegrity": "$t(txt-export) File Integrity",
   "txt-export-getVansCpe": "$t(txt-export) CPE",
   "txt-export-getVansCve": "$t(txt-export) CVE",
+  "txt-export-getKbid": "$t(txt-export)KBID",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
@@ -455,6 +456,9 @@
     "txt-downloadTrackList": "Download Track List",
     "txt-deviceNotAvailable": "Device is not available",
     "txt-report-nccst": "Report NCCST",
+    "txt-report-kbid": "Report KBID",
+    "txt-kbid": "KBID",
+    "txt-exposedDevices": "Exposed Devices",
     "txt-report-nccst-success": "Report Success",
     "txt-report-nccst-fail": "Report Failed",
     "txt-uploadMergedCpe": "Upload CPE",
