--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -211,6 +211,7 @@
   "txt-export-getFileIntegrity": "$t(txt-export)File Integrity",
   "txt-export-getVansCpe": "$t(txt-export)CPE",
   "txt-export-getVansCve": "$t(txt-export)CVE",
+  "txt-export-getKbid": "$t(txt-export)KBID",
   "txt-maxDataMsg": "資料筆數最大為10,000筆",
   "txt-es-data-over-limit": "超出搜尋範圍，請修改查詢條件",
   "txt-duplicatedName": "名稱不得重複",
@@ -455,6 +456,9 @@
     "txt-downloadTrackList": "下載追蹤清單",
     "txt-deviceNotAvailable": "主機不存在",
     "txt-report-nccst": "回報NCCST",
+    "txt-report-kbid": "回報KBID",
+    "txt-kbid": "KBID",
+    "txt-exposedDevices": "資產數量",
     "txt-report-nccst-success": "回報成功",
     "txt-report-nccst-fail": "回報失敗",
     "txt-uploadMergedCpe": "上傳合併CPE",
